[package]
name = "linkease"
version = "0.1.0"
authors = ["Sergio Lima <sergiosouzalima@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
toml = "0.5.2"
serde = "1.0.136"
serde_derive = "1.0.136"
indoc = "2"

[dependencies.regex]
version = "1.3"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]

